# sandbox

sb/: pyproject.toml
sb/sb/: .gitignore  ecsu.py  gear_eff.py  mandelbrot.py  matrix_dot_time.py  sb.py  static_drill_sec2.py  time_stamp_print.py
sb/sb/column_sort/: MoveType.py  board.py  color.py  column.py  depth_first_search.py  dfs.json  graphix.py  main.py  move_type.py
sb/sb/equal_load/: el_algorithm.py  graphix.py  load.py  main.py
sb/sb/fit/: argument.py  base_function.py  data_generator.py  main.py
sb/sb/henon_map/: hm.py
sb/sb/mandelbrot/: mandelbrot.py  static_param.py
sb/sb/mercator_converter/: mercator_converter.py
sb/sb/other/: color_map_3_to_2.py  matrix_dot_time.py  pycuda_sample.py  wordle.py
sb/sb/particle/: field_profile.py  graphic_path_manager.py  main.py  particle_field.py  particle_profiles.py  physical_eq.py  playground.py
sb/sb/planning/: main.py  plan.py
sb/sb/sbutil/: time_stamp_print.py
sb/sb/svd/: show_svd.py
sb/tests/: test_sb.py
