[tool.poetry]
name = "sb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
jedi = "0.17.2"
matplotlib = "^3.3.3"
scipy = "^1.6.0"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
