[tool.poetry]
name = "sb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
jedi = "0.17.2"
matplotlib = "^3.3.3"
scipy = "^1.6.0"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
numpy = "^1.20.2"
tqdm = "^4.60.0"
opencv-python = "^4.5.1"
ffmpeg-python = "^0.2.0"
pycuda = "^2021.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
